--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -78,9 +78,10 @@
     background: map-get($white, dark)
 
 .example
+  +root-element
   padding: $space
   margin-bottom: $space
-  background: map-get($white, dark)
+  border-color: map-get($white, darker)
 
   > *:last-child
     margin-bottom: 0
