--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -10,7 +10,8 @@ html
   color: map-get($black, lightest)
 
 ul
-  margin-bottom: $space
+  margin: 0
+    bottom: $space
 
 h1, h2, h3, h4, h5, h6, p
   margin: 0
