--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -5,6 +5,7 @@
   color: map-get($black, light)
   text-align: left
   transition: box-shadow 0.15s
+  vertical-align: middle
 
   &.with-submenu
     position: relative
@@ -125,7 +126,13 @@
   z-index: 10
 
 =button-group-default($color, $size)
-  +list-unstyled
+  list-style: none
+  padding: 0
+  margin:
+    bottom: 0
+    top: 0
+  display: inline-block
+  vertical-align: middle
 
   li
     color: inherit
