Adding tests for dropdown button

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -54,6 +54,17 @@ html(lang='en')
         li
           a(href="#") Option 2
 
+    ul#ddbutton3
+      li
+        a(href="#") Upload
+      li
+        a.button-dropdown(href="#") +
+        ul
+          li
+            a(href="#") Choose from library
+          li
+            a(href="#") Take a picture
+
 
     footer
       script.
