Adding another test and passing it, about to move some things out of navigation

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -57,7 +57,7 @@ html(lang='en')
     ul#ddbutton3
       li
         a(href="#") Upload
-      li
+      li#dropdownParent
         a.button-dropdown(href="#") +
         ul
           li
