Adjusting form styles

--- a/lib/jade/docs/3.x/layout.jade
+++ b/lib/jade/docs/3.x/layout.jade
@@ -13,12 +13,12 @@ block container
       section.meta
         h1 View Options
         form
-          label.checkbox
+          label
             input#docs-semantic(type="checkbox" checked)
-            |  Semantic Sass
-          label.checkbox
+            | Semantic Sass
+          label
             input#docs-jquery(type="checkbox")
-            |  jQuery
+            | jQuery
 
         block meta
 
