--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -60,6 +60,10 @@ label, legend
   label + &
     margin-top: ($space/5)
 
+  &:focus
+    outline: 0px
+    box-shadow: 0px 0px 0px 2px $primary-color
+
 +text-inputs
   +input-styles
 
@@ -71,15 +75,9 @@ input[type="checkbox"],
 input[type="radio"]
   display: inline-block
   width: 14px
-  margin-left: 1px
-  + label
-    display: inline-block
-    width: 100%
-    margin: 0
-    margin-left: -15px
-    margin-bottom: 3px
-    padding-left: 19px
-    font-weight: normal
+  margin:
+    left: 1px
+    right: 5px
 
 select
   +button
@@ -102,13 +100,9 @@ select
     + input[type="text"]
       width: 50%
       display: inline-block
-  input[type="checkbox"]
-    + label
-      text-align: left
 
 =form_group-default($orientation)
   display: block
-  overflow: hidden
   margin-bottom: $space
 
   @if $orientation == 'horizontal'
