Decoupled submenu from navigation, now moving to buttons

--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -194,6 +194,9 @@ hr
 =navbar($bleed-container: false, $background: map-get($white, dark))
   +navbar-default($bleed-container, $background)
 
+=dropdown_menu
+  +dropdown_menu-default
+
 // Table
 // -----
 
