--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -38,7 +38,7 @@
       > ul:last-child
         margin-right: (-1 * map-get($rootElement, paddingH))
 
-    ul
+    > ul
       margin: 0
       padding: 0
       display: flex
@@ -47,7 +47,7 @@
       align-items: center
       flex-wrap: wrap
 
-      li
+      > li
         list-style: none
         +root-element
         margin-bottom: 0
@@ -95,7 +95,7 @@
               border-color: map-get($white, darker)
               border-bottom-color: transparent
 
-        a:not([role=button])
+        > a:not([role=button])
           +color($background)
           text-decoration: none
           cursor: pointer
@@ -122,39 +122,3 @@
             background: darken($background, 15%)
             border-color: darken($background, 15%)
 
-      ul
-        display: none
-        position: absolute
-        z-index: 10
-        background: white
-        top: 100%
-        margin-top: 1px
-        left: -1px // Compensate for border
-        min-width: 175px
-        border:
-          left: 1px solid map-get($white, darker)
-          right: 1px solid map-get($white, darker)
-          bottom: 1px solid map-get($white, darker)
-
-        &:before
-          display: block
-          position: absolute
-          content: ' '
-
-        li
-          border: 0px
-
-          a:not([role=button])
-            padding:
-              top: $space/4
-              bottom: $space/4
-            color: $default-font-color
-
-            &:hover
-              color: rgba(0, 0, 0, 0.85)
-              background: map-get($white, dark)
-              border-color: map-get($white, dark)
-
-            &:active
-              background: map-get($white, darker)
-              border-color: map-get($white, darker)
