Fixing nav tests

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -13,14 +13,14 @@ html(lang='en')
         ul
           li
             a(href="#") Just an average link
-          li
+          li#test-nav-subparent
             a#test-nav-submenu-link(href="#") Submenu
             ul#test-nav-submenu
               li
                 a(href="#") Submenu link 1.1
               li
                 a(href="#") Submenu link 1.2
-          li
+          li#test-nav-subparent-2
             a#test-nav-submenu-link-2(href="#") Submenu 2
             ul#test-nav-submenu-2
               li
