--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -194,6 +194,9 @@ hr
 =navbar($bleed-container: false, $background: map-get($white, dark))
   +navbar-default($bleed-container, $background)
 
+=dropdown_menu
+  +dropdown_menu-default
+
 // Table
 // -----
 
