Generating failing visual test for buttons in nav

--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -38,3 +38,24 @@
             li: a(href="http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/2.x/") 2.0.8
             li: a(href="/docs/3.x") #{currentVersion} (current)
             li: a(href="/docs/4.x") 4 (Future plans)
+        li
+          ul.button-group
+            li
+              a(href="#") Upload
+            li
+              button.button-dropdown
+              ul
+                li
+                  a(href="#") Choose from library
+                li
+                  a(href="#") Take a picture
+        li(style="display: none")
+          button
+            | Add photo
+            ul
+              li
+                a(href="#") Upload
+              li
+                a(href="#") Choose from library
+              li
+                a(href="#") Take a picture
