--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -44,7 +44,7 @@ $default-line-height: 1.4rem
 
 $scalingFactor: 0.2vw
 
-$rootElement: (paddingV: 5px, paddingH: 12px)
+$rootElement: (paddingV: 5px, paddingH: 12px, border-radius: 3px)
 
 $default-font: $body-font-family
 $default-font-size: $base-font-size  // TODO: Why?
