--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -25,7 +25,7 @@ block hero-example
       li
         a(href="#") Upload
       li
-        a.button-dropdown(href="#")
+        button.button-dropdown(href="#")
         ul
           li
             a(href="#") Choose from library
@@ -192,7 +192,7 @@ block granular
       li
         a(href="#") Upload
       li
-        a.button-dropdown(href="#")
+        button.button-dropdown
         ul
           li
             a(href="#") Choose from library
@@ -207,7 +207,7 @@ block granular
             <a href="#">Upload</a>
           </li>
           <li>
-            <a href="#" class="button-dropdown"></a>
+            <button class="button-dropdown"></button>
             <ul>
               <li>
                 <a href="#">Choose from library</a>
