--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -134,7 +134,7 @@
         border-bottom-left-radius: 0
         border-left: 0
 
-    a.button-dropdown
+    .button-dropdown
 
       &:after
         content: '+'
