--- a/lib/sass/components/_dropdown_menu.sass
+++ b/lib/sass/components/_dropdown_menu.sass
@@ -15,6 +15,8 @@
         left: 1px solid map-get($white, darker)
         right: 1px solid map-get($white, darker)
         bottom: 1px solid map-get($white, darker)
+      border-radius: map-get($rootElement, border-radius)
+      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25)
 
       &:before
         display: block
@@ -41,10 +43,6 @@
             border-color: map-get($white, darker)
             background: map-get($white, darker)
             box-shadow: none
-
-        &:last-child
-          a:not([role="button"])
-            // TODO: Get border radius from root-element
 
     &.open
       ul
