--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -134,7 +134,7 @@
         border-bottom-left-radius: 0
         border-left: 0
 
-    a.button-dropdown
+    .button-dropdown
 
       &:after
         content: '+'
