--- a/rails/app/assets/stylesheets/kickstart_rails/components/_dropdown_menu.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_dropdown_menu.sass
@@ -15,6 +15,8 @@
         left: 1px solid map-get($white, darker)
         right: 1px solid map-get($white, darker)
         bottom: 1px solid map-get($white, darker)
+      border-radius: map-get($rootElement, border-radius)
+      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25)
 
       &:before
         display: block
@@ -25,19 +27,22 @@
         border: 0px
 
         a:not([role=button])
-          padding:
-            top: $space/4
-            bottom: $space/4
-          color: $default-font-color
+          +button
+          display: block
+          margin-bottom: 0
+          border-radius: 0
+          background: white
+          border-color: white
 
           &:hover
-            color: rgba(0, 0, 0, 0.85)
-            background: map-get($white, dark)
             border-color: map-get($white, dark)
+            background: map-get($white, dark)
+            box-shadow: none
 
           &:active
-            background: map-get($white, darker)
             border-color: map-get($white, darker)
+            background: map-get($white, darker)
+            box-shadow: none
 
     &.open
       ul
