--- a/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
@@ -95,6 +95,11 @@
               border-color: map-get($white, darker)
               border-bottom-color: transparent
 
+        ul
+          border-top-left-radius: 0
+          border-top-right-radius: 0
+          box-shadow: 3px 3px 3px -3px rgba(0, 0, 0, 0.25)
+
         > a:not([role=button])
           +color($background)
           text-decoration: none
