Calling buttons DONE

--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -38,7 +38,7 @@
             li: a(href="http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/2.x/") 2.0.8
             li: a(href="/docs/3.x") #{currentVersion} (current)
             li: a(href="/docs/4.x") 4 (Future plans)
-        li
+        li(style="display: none")
           ul.button-group(role="button")
             li
               a(href="#" role="button") Upload
@@ -49,7 +49,7 @@
                   a(href="#") Choose from library
                 li
                   a(href="#") Take a picture
-        li
+        li(style="display: none")
           button(role="button")
             | Add photo
             ul
