--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -163,7 +163,7 @@ block granular
   :markdown
     <span>
 
-        <ul class="button-group">
+        <ul class="button-group" role="button">
           <li>
             <a href="#">Create</a>
           </li>
@@ -209,7 +209,7 @@ block granular
   :markdown
     <span>
 
-        <ul class="button-group">
+        <ul class="button-group" role="button">
           <li>
             <a href="#">Upload</a>
           </li>
@@ -264,7 +264,7 @@ block granular
   :markdown
     <span>
 
-        <button class="button">
+        <button class="button" role="button">
           Add photo
           <ul>
             <li>
