--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -16,6 +16,7 @@ block mainpane
 
       h2 Designed to be customized
       ul
+        li Functionality for 3rd party extensions are designed into the framework.
         li Easily create themes by extending components and defining a few core variables.
 
     .more
