--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -77,39 +77,39 @@
   +button-group
 
   &.button-primary
-    > li > *
+    > li > *:not(ul)
       +button-color($primary-color)
 
   &.button-secondary
-    > li > *
+    > li > *:not(ul)
       +button-color($secondary-color)
 
   &.button-clear
-    > li > *
+    > li > *:not(ul)
       +button-color(transparent)
 
   &.button-red
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, red))
 
   &.button-orange
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, orange))
 
   &.button-yellow
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, yellow))
 
   &.button-green
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, green))
 
   &.button-blue
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, blue))
 
   &.button-violet
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, violet))
 
   &.button-small
