Possibly fixing weird navigation flash issue

--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -99,6 +99,7 @@
           border-top-left-radius: 0
           border-top-right-radius: 0
           box-shadow: 3px 3px 3px -3px rgba(0, 0, 0, 0.25)
+          display: none
 
         > a:not([role=button])
           +color($background)
