Trying out some different themes

--- a/lib/sass/core/_grid.sass
+++ b/lib/sass/core/_grid.sass
@@ -1,4 +1,18 @@
-// 1/2 The snippet
+// Still playing with this
+  $mobile: (
+    default: 360px,
+    large: 480px,
+    larger: 600px,
+    largest: 768px
+  )
+
+//
+  $display: (
+    smallest: 960px,
+    smaller: 1024px,
+    small: 1200px,
+    default: 1400px
+  )
 
 $phone: 360px
 $phablet: 480px
