--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -77,47 +77,47 @@
   +button-group
 
   &.button-primary
-    > li > *
+    > li > *:not(ul)
       +button-color($primary-color)
 
   &.button-secondary
-    > li > *
+    > li > *:not(ul)
       +button-color($secondary-color)
 
   &.button-clear
-    > li > *
+    > li > *:not(ul)
       +button-color(transparent)
 
   &.button-red
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, red))
 
   &.button-orange
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, orange))
 
   &.button-yellow
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, yellow))
 
   &.button-green
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, green))
 
   &.button-blue
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, blue))
 
   &.button-violet
-    > li > *
+    > li > *:not(ul)
       +button-color(map-get($colors, violet))
 
   &.button-small
-    > li > *
+    > li > *:not(ul)
       +button-size($size: 0.85)
 
   &.button-large
-    > li > *
+    > li > *:not(ul)
       +button-size($size: 1.2)
 
 // FORMS
