--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart-semantic.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart-semantic.sass
@@ -5,6 +5,7 @@
 //  the same .css name from your html/jade file.
 
 // Choose your theme
-@import themes/_default
+// @import themes/_default
+@import themes/_shabbychic
 
 // Now write your own Sass
