--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -34,7 +34,9 @@ block hero-example
 
 block basic
   h2 Single element
-  button(data-ks-tooltip="I'm a tooltip") Hover over me
+
+  .example
+    button(data-ks-tooltip="I'm a tooltip") Hover over me
 
   :markdown
     <span>
@@ -166,7 +168,8 @@ block variations
   :markdown
     ## Coloring
 
-  +colors
+  .example
+    +colors
 
   .if-semantic
     :markdown 
@@ -212,21 +215,22 @@ block variations
 
     Tooltips can be positioned to the top, left, right, or bottom.
 
-  .tooltip_trigger
-    button.button Top
-    span.tooltip I'm on top
-    | &nbsp;
-  .tooltip_trigger
-    button.button Left
-    span.tooltip.tooltip-left I'm on the left
-    | &nbsp;
-  .tooltip_trigger
-    button.button Right
-    span.tooltip.tooltip-right I'm on the right
-    | &nbsp;
-  .tooltip_trigger
-    button.button Bottom
-    span.tooltip.tooltip-bottom I'm on the bottom
+  .example
+    .tooltip_trigger
+      button.button Top
+      span.tooltip I'm on top
+      | &nbsp;
+    .tooltip_trigger
+      button.button Left
+      span.tooltip.tooltip-left I'm on the left
+      | &nbsp;
+    .tooltip_trigger
+      button.button Right
+      span.tooltip.tooltip-right I'm on the right
+      | &nbsp;
+    .tooltip_trigger
+      button.button Bottom
+      span.tooltip.tooltip-bottom I'm on the bottom
 
   :markdown
     By default, tooltips will be positioned "top". To position left, right, or bottom,
@@ -249,12 +253,13 @@ block variations
     Because of html rules concerning nesting block versus inline elements, it's
     important to avoid using block tags (like `<p>` or `<div>`) in text tags.
 
-  p 
-    | Here is&nbsp;
-    a.tooltip_trigger(href="#")
-      span a very long string of text which uses a tooltip but it's very long, so, you know.
-      span.tooltip That's good.
-    |  You can rest assured the block of text keeps going on and on.
+  .example
+    p 
+      | Here is&nbsp;
+      a.tooltip_trigger(href="#")
+        span a very long string of text which uses a tooltip but it's very long, so, you know.
+        span.tooltip That's good.
+      |  You can rest assured the block of text keeps going on and on.
 
   :markdown
     <span>
